--- a/circle.yml
+++ b/circle.yml
@@ -20,5 +20,5 @@ deployment:
       - aws --version
       - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
       - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-      - aws configure set default.region ap-northeast-1
-      - aws s3 cp target/spring-boot-sample-*.jar s3://spring-boot-sample-bucket/
+      - aws configure set default.region ap-southeast-1
+      - aws s3 cp target/spring-boot-sample-*.jar s3://grande-products/
