--- a/circle.yml
+++ b/circle.yml
@@ -6,8 +6,6 @@ machine:
     version: oraclejdk8
 dependencies:
   override:
-    - sudo pip install --upgrade pip
-    - sudo pip install awscli
     - mvn dependency:resolve
 test:
   override:
@@ -17,8 +15,4 @@ deployment:
     branch: master
     commands:
       - mvn package
-      - aws --version
-      - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
-      - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-      - aws configure set default.region ap-southeast-1
-      - aws s3 cp target/spring-boot-sample-*.jar s3://grande-products/
+      - scp target/spring-boot-sample-*.jar centos@52.76.31.173:/home/centos
